latex_to_zh/g4/LatexParser.py
# Generated from g4/Latex.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LatexParser ( Parser ):

    grammarFileName = "Latex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'^T'", "'^{T}'", "'^{\\top}'", "'''", 
                     "<INVALID>", "'\\$'", "'\\,'", "'+'", "'-'", "<INVALID>", 
                     "<INVALID>", "'\\u00B1'", "'('", "')'", "'\\lgroup'", 
                     "'\\rgroup'", "'{'", "'}'", "'\\{'", "'\\}'", "'\\lbrace'", 
                     "'\\rbrace'", "'['", "']'", "'\\lbrack'", "'\\rbrack'", 
                     "'|'", "'\\lvert'", "'\\rvert'", "'\\vert'", "'\\|'", 
                     "'\\lfloor'", "'\\rfloor'", "'\\llcorner'", "'\\lrcorner'", 
                     "'\\lceil'", "'\\rceil'", "'\\ulcorner'", "'\\urcorner'", 
                     "'\\left'", "'\\right'", "'\\mleft'", "'\\mright'", 
                     "'\\lim'", "<INVALID>", "'\\int'", "'\\sum'", "'\\prod'", 
                     "'\\log'", "'\\ln'", "'\\exp'", "'\\sin'", "'\\cos'", 
                     "'\\tan'", "'\\csc'", "'\\sec'", "'\\cot'", "'\\arcsin'", 
                     "'\\arccos'", "'\\arctan'", "'\\arccsc'", "'\\arcsec'", 
                     "'\\arccot'", "'\\sinh'", "'\\cosh'", "'\\tanh'", "'\\arsinh'", 
                     "'\\arcosh'", "'\\artanh'", "'\\arcsinh'", "'\\arccosh'", 
                     "'\\arctanh'", "'arsinh'", "'arcsinh'", "'arcosh'", 
                     "'arccosh'", "'artanh'", "'arctanh'", "'gcd'", "'lcm'", 
                     "'floor'", "'ceil'", "'\\sqrt'", "'\\gcd'", "'\\lcm'", 
                     "'\\floor'", "'\\ceil'", "'\\max'", "'\\min'", "'\\det'", 
                     "'eye'", "'zeros'", "'ones'", "'cols'", "'rows'", "'diag'", 
                     "'norm'", "'rank'", "<INVALID>", "'rref'", "'hstack'", 
                     "'vstack'", "<INVALID>", "'nullspace'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\triangle'", 
                     "'\\times'", "'\\cdot'", "'\\cdots'", "'\\div'", "'\\frac'", 
                     "<INVALID>", "'\\choose'", "'\\mod'", "'\\pm'", "'\\text'", 
                     "'\\mathit'", "'\\operatorname'", "'matrix'", "'pmatrix'", 
                     "'bmatrix'", "'vmatrix'", "'cases'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'&'", "'\\\\'", "'_'", "'^'", "':'", 
                     "';'", "','", "'.'", "<INVALID>", "<INVALID>", "'E'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\in'", "'='", 
                     "<INVALID>", "'<'", "<INVALID>", "'>'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "DOLLAR_SIGN", "STYPE", "ADD", 
                      "SUB", "MUL", "DIV", "PM", "L_PAREN", "R_PAREN", "L_GROUP", 
                      "R_GROUP", "L_BRACE", "R_BRACE", "L_BRACE_VISUAL", 
                      "R_BRACE_VISUAL", "L_BRACE_CMD", "R_BRACE_CMD", "L_BRACKET", 
                      "R_BRACKET", "L_BRACK", "R_BRACK", "BAR", "L_VERT", 
                      "R_VERT", "VERT", "NORM", "L_FLOOR", "R_FLOOR", "LL_CORNER", 
                      "LR_CORNER", "L_CEIL", "R_CEIL", "UL_CORNER", "UR_CORNER", 
                      "L_LEFT", "R_RIGHT", "ML_LEFT", "MR_RIGHT", "FUNC_LIM", 
                      "LIM_APPROACH_SYM", "FUNC_INT", "FUNC_SUM", "FUNC_PROD", 
                      "FUNC_LOG", "FUNC_LN", "FUNC_EXP", "FUNC_SIN", "FUNC_COS", 
                      "FUNC_TAN", "FUNC_CSC", "FUNC_SEC", "FUNC_COT", "FUNC_ARCSIN", 
                      "FUNC_ARCCOS", "FUNC_ARCTAN", "FUNC_ARCCSC", "FUNC_ARCSEC", 
                      "FUNC_ARCCOT", "FUNC_SINH", "FUNC_COSH", "FUNC_TANH", 
                      "FUNC_ARSINH", "FUNC_ARCOSH", "FUNC_ARTANH", "FUNC_ARCSINH", 
                      "FUNC_ARCCOSH", "FUNC_ARCTANH", "FUNC_ARSINH_NAME", 
                      "FUNC_ARCSINH_NAME", "FUNC_ARCOSH_NAME", "FUNC_ARCCOSH_NAME", 
                      "FUNC_ARTANH_NAME", "FUNC_ARCTANH_NAME", "FUNC_GCD_NAME", 
                      "FUNC_LCM_NAME", "FUNC_FLOOR_NAME", "FUNC_CEIL_NAME", 
                      "FUNC_SQRT", "FUNC_GCD", "FUNC_LCM", "FUNC_FLOOR", 
                      "FUNC_CEIL", "FUNC_MAX", "FUNC_MIN", "FUNC_DET", "FUNC_EYE_NAME", 
                      "FUNC_ZEROS_NAME", "FUNC_ONES_NAME", "FUNC_COLS_NAME", 
                      "FUNC_ROWS_NAME", "FUNC_DIAG_NAME", "FUNC_NORM_NAME", 
                      "FUNC_RANK_NAME", "FUNC_TRACE_NAME", "FUNC_RREF_NAME", 
                      "FUNC_HSTACK_NAME", "FUNC_VSTACK_NAME", "FUNC_ORTHOGONALIZE_NAME", 
                      "FUNC_NULLSPACE_NAME", "FUNC_DIAGONALIZE_NAME", "FUNC_EIGENVALS_NAME", 
                      "FUNC_EIGENVECTORS_NAME", "FUNC_SVD_NAME", "FUNC_TRIANGLE", 
                      "CMD_TIMES", "CMD_CDOT", "CMD_CDOTS", "CMD_DIV", "CMD_FRAC", 
                      "CMD_BINOM", "CMD_CHOOSE", "CMD_MOD", "CMD_PM", "CMD_TEXT", 
                      "CMD_MATHIT", "CMD_OPERATORNAME", "MATRIX_TYPE_MATRIX", 
                      "MATRIX_TYPE_PMATRIX", "MATRIX_TYPE_BMATRIX", "MATRIX_TYPE_DET", 
                      "MATRIX_TYPE_CASES", "MATRIX_TYPES", "CMD_MATRIX_START", 
                      "CMD_MATRIX_END", "CMD_DET_START", "CMD_DET_END", 
                      "CMD_CASES_START", "CMD_CASES_END", "MATRIX_DEL_COL", 
                      "MATRIX_DEL_ROW", "UNDERSCORE", "CARET", "COLON", 
                      "SEMICOLON", "COMMA", "PERIOD", "DIFFERENTIAL", "EXP_E", 
                      "E_NOTATION_E", "LETTER_NO_E", "TRIANGLE_LETTER", 
                      "TEXT_LETTER", "MATRIX_XRIGHTARROW", "TRANSFORM_EXCHANGE", 
                      "NUMBER", "E_NOTATION", "IN", "ASSIGNMENT", "EQUAL", 
                      "LT", "LTE", "GT", "GTE", "UNEQUAL", "AROUND", "BANG", 
                      "PERCENT_NUMBER", "SYMBOL", "VARIABLE", "OTHER_SYMBOL_CMD", 
                      "GREEK_CMD", "ACCENT_SYMBOL" ]

    RULE_formula = 0
    RULE_transpose = 1
    RULE_transform_atom = 2
    RULE_transform_scale = 3
    RULE_transform_swap = 4
    RULE_transform_assignment = 5
    RULE_elementary_transform = 6
    RULE_elementary_transforms = 7
    RULE_matrix = 8
    RULE_det = 9
    RULE_cases = 10
    RULE_matrix_row = 11
    RULE_relation = 12
    RULE_relation_list = 13
    RULE_relation_list_content = 14
    RULE_equality = 15
    RULE_expr = 16
    RULE_additive = 17
    RULE_mp = 18
    RULE_mp_nofunc = 19
    RULE_unary = 20
    RULE_unary_nofunc = 21
    RULE_postfix = 22
    RULE_postfix_nofunc = 23
    RULE_postfix_op = 24
    RULE_eval_at = 25
    RULE_eval_at_sub = 26
    RULE_eval_at_sup = 27
    RULE_exp = 28
    RULE_exp_nofunc = 29
    RULE_triangle = 30
    RULE_comp = 31
    RULE_comp_nofunc = 32
    RULE_group = 33
    RULE_norm_group = 34
    RULE_abs_group = 35
    RULE_floor_group = 36
    RULE_ceil_group = 37
    RULE_accent = 38
    RULE_atom_expr_no_supexpr = 39
    RULE_atom_expr = 40
    RULE_atom = 41
    RULE_mathit = 42
    RULE_mathit_text = 43
    RULE_text = 44
    RULE_frac = 45
    RULE_binom = 46
    RULE_func_normal_functions_single_arg = 47
    RULE_func_normal_functions_multi_arg = 48
    RULE_func_operator_names_single_arg = 49
    RULE_func_operator_names_multi_arg = 50
    RULE_func_normal_single_arg = 51
    RULE_func_normal_multi_arg = 52
    RULE_func = 53
    RULE_args = 54
    RULE_func_common_args = 55
    RULE_limit_sub = 56
    RULE_func_single_arg = 57
    RULE_func_single_arg_noparens = 58
    RULE_func_multi_arg = 59
    RULE_func_multi_arg_noparens = 60
    RULE_subexpr = 61
    RULE_supexpr = 62
    RULE_subeq = 63
    RULE_supeq = 64

    ruleNames =  [ "formula", "transpose", "transform_atom", "transform_scale", 
                   "transform_swap", "transform_assignment", "elementary_transform", 
                   "elementary_transforms", "matrix", "det", "cases", "matrix_row", 
                   "relation", "relation_list", "relation_list_content", 
                   "equality", "expr", "additive", "mp", "mp_nofunc", "unary", 
                   "unary_nofunc", "postfix", "postfix_nofunc", "postfix_op", 
                   "eval_at", "eval_at_sub", "eval_at_sup", "exp", "exp_nofunc", 
                   "triangle", "comp", "comp_nofunc", "group", "norm_group", 
                   "abs_group", "floor_group", "ceil_group", "accent", "atom_expr_no_supexpr", 
                   "atom_expr", "atom", "mathit", "mathit_text", "text", 
                   "frac", "binom", "func_normal_functions_single_arg", 
                   "func_normal_functions_multi_arg", "func_operator_names_single_arg", 
                   "func_operator_names_multi_arg", "func_normal_single_arg", 
                   "func_normal_multi_arg", "func", "args", "func_common_args", 
                   "limit_sub", "func_single_arg", "func_single_arg_noparens", 
                   "func_multi_arg", "func_multi_arg_noparens", "subexpr", 
                   "supexpr", "subeq", "supeq" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    WS=5
    DOLLAR_SIGN=6
    STYPE=7
    ADD=8
    SUB=9
    MUL=10
    DIV=11
    PM=12
    L_PAREN=13
    R_PAREN=14
    L_GROUP=15
    R_GROUP=16
    L_BRACE=17
    R_BRACE=18
    L_BRACE_VISUAL=19
    R_BRACE_VISUAL=20
    L_BRACE_CMD=21
    R_BRACE_CMD=22
    L_BRACKET=23
    R_BRACKET=24
    L_BRACK=25
    R_BRACK=26
    BAR=27
    L_VERT=28
    R_VERT=29
    VERT=30
    NORM=31
    L_FLOOR=32
    R_FLOOR=33
    LL_CORNER=34
    LR_CORNER=35
    L_CEIL=36
    R_CEIL=37
    UL_CORNER=38
    UR_CORNER=39
    L_LEFT=40
    R_RIGHT=41
    ML_LEFT=42
    MR_RIGHT=43
    FUNC_LIM=44
    LIM_APPROACH_SYM=45
    FUNC_INT=46
    FUNC_SUM=47
    FUNC_PROD=48
    FUNC_LOG=49
    FUNC_LN=50
    FUNC_EXP=51
    FUNC_SIN=52
    FUNC_COS=53
    FUNC_TAN=54
    FUNC_CSC=55
    FUNC_SEC=56
    FUNC_COT=57
    FUNC_ARCSIN=58
    FUNC_ARCCOS=59
    FUNC_ARCTAN=60
    FUNC_ARCCSC=61
    FUNC_ARCSEC=62
    FUNC_ARCCOT=63
    FUNC_SINH=64
    FUNC_COSH=65
    FUNC_TANH=66
    FUNC_ARSINH=67
    FUNC_ARCOSH=68
    FUNC_ARTANH=69
    FUNC_ARCSINH=70
    FUNC_ARCCOSH=71
    FUNC_ARCTANH=72
    FUNC_ARSINH_NAME=73
    FUNC_ARCSINH_NAME=74
    FUNC_ARCOSH_NAME=75
    FUNC_ARCCOSH_NAME=76
    FUNC_ARTANH_NAME=77
    FUNC_ARCTANH_NAME=78
    FUNC_GCD_NAME=79
    FUNC_LCM_NAME=80
    FUNC_FLOOR_NAME=81
    FUNC_CEIL_NAME=82
    FUNC_SQRT=83
    FUNC_GCD=84
    FUNC_LCM=85
    FUNC_FLOOR=86
    FUNC_CEIL=87
    FUNC_MAX=88
    FUNC_MIN=89
    FUNC_DET=90
    FUNC_EYE_NAME=91
    FUNC_ZEROS_NAME=92
    FUNC_ONES_NAME=93
    FUNC_COLS_NAME=94
    FUNC_ROWS_NAME=95
    FUNC_DIAG_NAME=96
    FUNC_NORM_NAME=97
    FUNC_RANK_NAME=98
    FUNC_TRACE_NAME=99
    FUNC_RREF_NAME=100
    FUNC_HSTACK_NAME=101
    FUNC_VSTACK_NAME=102
    FUNC_ORTHOGONALIZE_NAME=103
    FUNC_NULLSPACE_NAME=104
    FUNC_DIAGONALIZE_NAME=105
    FUNC_EIGENVALS_NAME=106
    FUNC_EIGENVECTORS_NAME=107
    FUNC_SVD_NAME=108
    FUNC_TRIANGLE=109
    CMD_TIMES=110
    CMD_CDOT=111
    CMD_CDOTS=112
    CMD_DIV=113
    CMD_FRAC=114
    CMD_BINOM=115
    CMD_CHOOSE=116
    CMD_MOD=117
    CMD_PM=118
    CMD_TEXT=119
    CMD_MATHIT=120
    CMD_OPERATORNAME=121
    MATRIX_TYPE_MATRIX=122
    MATRIX_TYPE_PMATRIX=123
    MATRIX_TYPE_BMATRIX=124
    MATRIX_TYPE_DET=125
    MATRIX_TYPE_CASES=126
    MATRIX_TYPES=127
    CMD_MATRIX_START=128
    CMD_MATRIX_END=129
    CMD_DET_START=130
    CMD_DET_END=131
    CMD_CASES_START=132
    CMD_CASES_END=133
    MATRIX_DEL_COL=134
    MATRIX_DEL_ROW=135
    UNDERSCORE=136
    CARET=137
    COLON=138
    SEMICOLON=139
    COMMA=140
    PERIOD=141
    DIFFERENTIAL=142
    EXP_E=143
    E_NOTATION_E=144
    LETTER_NO_E=145
    TRIANGLE_LETTER=146
    TEXT_LETTER=147
    MATRIX_XRIGHTARROW=148
    TRANSFORM_EXCHANGE=149
    NUMBER=150
    E_NOTATION=151
    IN=152
    ASSIGNMENT=153
    EQUAL=154
    LT=155
    LTE=156
    GT=157
    GTE=158
    UNEQUAL=159
    AROUND=160
    BANG=161
    PERCENT_NUMBER=162
    SYMBOL=163
    VARIABLE=164
    OTHER_SYMBOL_CMD=165
    GREEK_CMD=166
    ACCENT_SYMBOL=167

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relation(self):
            return self.getTypedRuleContext(LatexParser.RelationContext,0)


        def relation_list(self):
            return self.getTypedRuleContext(LatexParser.Relation_listContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula" ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula" ):
                listener.exitFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)




    def formula(self):

        localctx = LatexParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formula)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.relation(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.relation_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransposeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatexParser.RULE_transpose

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranspose" ):
                listener.enterTranspose(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranspose" ):
                listener.exitTranspose(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranspose" ):
                return visitor.visitTranspose(self)
            else:
                return visitor.visitChildren(self)




    def transpose(self):

        localctx = LatexParser.TransposeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_transpose)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Transform_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER_NO_E(self):
            return self.getToken(LatexParser.LETTER_NO_E, 0)

        def UNDERSCORE(self):
            return self.getToken(LatexParser.UNDERSCORE, 0)

        def NUMBER(self):
            return self.getToken(LatexParser.NUMBER, 0)

        def L_BRACE(self):
            return self.getToken(LatexParser.L_BRACE, 0)

        def R_BRACE(self):
            return self.getToken(LatexParser.R_BRACE, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_transform_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransform_atom" ):
                listener.enterTransform_atom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransform_atom" ):
                listener.exitTransform_atom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransform_atom" ):
                return visitor.visitTransform_atom(self)
            else:
                return visitor.visitChildren(self)




    def transform_atom(self):
